--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
   "author": "Bandar93 <alshalahi93@outlook.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.12"
   },
   "scripts": {
     "start": "nodemon app.js"
   }
-  
-
-  
 }
