--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Bandar93 <alshalahi93@outlook.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "mongoose": "^6.0.12"
   },
