--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
-    "mongoose-slug-plugin": "^2.1.0"
+    "mongoose-slug-plugin": "^2.1.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   },
   "scripts": {
     "start": "nodemon app.js"
