--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^6.0.12",
     "mongoose-slug-plugin": "^2.1.0",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "scripts": {
