--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "mongoose-morgan": "^1.0.17",
     "mongoose-slug-plugin": "^2.1.0",
     "multer": "^1.4.3",
     "passport": "^0.5.0",
