--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "mongoose-morgan": "^1.0.17",
     "mongoose-slug-plugin": "^2.1.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
