--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongoose-morgan": "^1.0.17",
     "mongoose-slug-plugin": "^2.1.0",
     "multer": "^1.4.3",
+    "normalize": "^0.3.1",
+    "normalize-path": "^3.0.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
